--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hello
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/penglimin/flutter_hello_test
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
